--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
 <script src="https://p5play.org/v3/planck.min.js"></script>
 <script src="https://p5play.org/v3/p5play.js"></script>
-
+<script src="./JS/game_test.js"></script>
    
 
   </head>
