--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>baced</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./assets/tankicon.jpg">
+    <link rel="icon" type="image/x-icon" href="./assets/peeper.jpg">
     <style>
       body {
         padding: 0;
