--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <title>baced</title>
+    <title>surnautica</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/peeper.jpg">
@@ -11,7 +10,6 @@
         padding: 0;
         margin: 0;
         background-color:#1e2e3e;
-
       }
     </style>
 <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
@@ -19,11 +17,7 @@
 <script src="https://p5play.org/v3/planck.min.js"></script>
 <script src="https://p5play.org/v3/p5play.js"></script>
 <script src="./JS/game_test.js"></script>
-   
-
   </head>
-
   <body>
   </body>
-
 </html>
